# voiceflow-backend

./: .gitignore  CLAUDE.md  README.md  check_dashboard.py  demo.py  live_transcribe.py  live_transcribe_moonshine.py  main.py  manager.py  manager.spec  pyproject.toml  server.py  server.spec
.claude/: settings.json  settings.local.json
desktop-app/: CLAUDE.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-app/src/: index.html  main.js  styles.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
desktop-app/src-tauri/src/commands/: server.rs
installer/: installer.iss
