[project]
name = "voiceflow-backend"
version = "0.1.0"
description = "Real-time voice transcription server with global hotkey support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "pyinstaller>=6.0.0",
]
[project.optional-dependencies]
manager = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.0",
    "win10toast>=0.9.0",
    "websocket-client>=1.7.0",
]
