[project]
name = "voiceflow-backend"
version = "0.1.0"
description = "Real-time voice transcription server with global hotkey support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "pyinstaller>=6.0.0",
    "pystray>=0.19.5",
    "pillow>=12.2.0",
    "pynput>=1.8.1",
    "win10toast>=0.9",
    "websocket-client>=1.9.0",
    "pyperclip>=1.11.0",
    "numpy>=2.4.4",
    "sounddevice>=0.5.5",
    "pathlib>=1.0.1",
    "torch>=2.11.0",
    "moonshine-voice>=0.0.51",
    "psutil>=7.2.2",
]
[project.optional-dependencies]
manager = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.0",
    "win10toast>=0.9.0",
    "websocket-client>=1.7.0",
]
